# sl

./: .gitignore  Makefile  bootstrap.sh  config.h.in~  configure.ac
src/: Makefile  Makefile.am  sl  yaju.html
src/.deps/: sl-sl.Po
